helm/face-authentication/envoy.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: envoy
  namespace: default
spec:
  template:
    spec:
      containers:
        - image: envoyproxy/envoy-alpine:v1.14.1
          name: envoy
          volumeMounts:
          - name: config-volume
            subpath: envoy.yaml
            mountPath: /etc/envoy/envoy.yaml
          ports:
          - name: http1
            containerPort: 8080
      volumes:
        - name: config-volume
          configMap:
            name: envoy-configmap
      
      imagePullSecrets:
        - name: regcred
