helm/face-authentication/front-end.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: front-end
  namespace: default
spec:
  template:
    spec:
      containers:
        - image: registry.zouzland.com/front-end:0.0.1
          name: front-end
      imagePullSecrets:
        - name: regcred
